--- a/public/contacto.html
+++ b/public/contacto.html
@@ -3,106 +3,111 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width= device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
 
-  <link rel="stylesheet" href="./css/global_.css">
-  <link rel="stylesheet" href="./css/navbar.css">
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/contacto.css">
-  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="stylesheet" href="css/temp__.css">
 
   <link rel="stylesheet" href="statics/fontawesome-free-652-web/css/all.min.css">
 
+  <!--google font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  <!--google font-->
 
-  <title>Zapaterias Nino</title>
+  <title>Zapateria Nino</title>
+
 </head>
 
 <body>
-  <header class="header">
+  <header id="nav-header" class="header">
+
     <div class="logo">
-      <img src="./img/logo1.jpg" alt="logo_nino">
+      <img src="img/logo1.png" alt="logo_nino">
     </div>
+
     <nav class="nav-bar">
-      <button class="menu-btn">Menu</button>
-      <ul class="nav-menu">
-        <li><a href="./index.html" class="nav-link">Inicio</a></li>
-        <li><a href="./products.html" class="nav-link">Catalogo</a></li>
-        <li><a href="#" class="nav-link">Contacto</a></li>
-        <li><a href="./ubicacion.html" class="nav-link">Ubicacion</a></li>
+      <button id="button-toggler" data-collapsed="true" class="menu-btn">Menu</button>
+
+      <ul id="navbar-collapse" class="nav-menu collapse">
+        <li class="nav-item"><a href="index.html">Inicio</a></li>
+        <li class="nav-item"><a href="products.html">Catalogo</a></li>
+        <li class="nav-item"><a href="#">Contacto</a></li>
+        <li class="nav-item"><a href="ubicacion.html">Ubicacion</a></li>
       </ul>
+
     </nav>
+
   </header>
 
   <main>
-    <div class="formulario">
-      <form id="contact" action="show_data.html" target="_blank">
-        <fieldset class="imput">
+    <h2>Formulario de contacto</h2>
 
-          <div class="group-input">
-            <label for="fullName" class="form-label">Nombre y Apellido:</label>
-            <input id="fullName" type="text" name="fullName" class="form-control" placeholder="xxxxxxxx">
+    <form id="contact" class="form-contact" action="show_data.html" target="_blank">
 
-            <div class="form-error"></div>
-          </div>
+      <fieldset class="form-fieldset">
 
-          <div class="group-input">
-            <label for="email" class="form-label">Correo electronico:</label>
-            <input id="email" type="email" name="email" class="form-control" placeholder="xxxxxx@xxxx">
+        <div class="group-input">
+          <label for="fullName" class="form-label">Nombre y Apellido:</label>
+          <input id="fullName" type="text" name="fullName" class="form-control" placeholder="xxxxxxxx">
 
-            <div class="form-error"></div>
-          </div>
-
-          <div class="group-input">
-            <label for="phone" class="form-label">Telefono:</label>
-            <input id="phone" type="text" name="phone" class="form-control" placeholder="xx-xxxxxxx">
-
-            <div class="form-error"></div>
-          </div>
-
-          <div class="group-input">
-            <label for="message" class="form-label">Mensaje:</label>
-            <textarea id="message" name="message" class="form-control" cols="47" rows="10"></textarea>
-
-            <div class="form-error"></div>
-          </div>
-
-        </fieldset>
-
-        <fieldset>
-         
-          <legend> <br>¿Que tipo de calzado busca?</legend>
-
-          <div class="group-input" id="radio">
-            <label for="radio-children"><br>Niños</label>
-            <input id="radio-children" type="radio" name="category" value="children" checked>
-
-            <label for="radio-ladies">Damas</label>
-            <input id="radio-ladies" type="radio" name="category" value="ladies">
-
-            <label for="radio-gentlemen">Caballeros</label>
-            <input id="radio-gentlemen" type="radio" name="category" value="gentlemen">
-          </div>
-        </fieldset>
-
-        <div class="group-input" id="checkbox">
-          <label for="checkboxWhatsapp" class="form-checkbox">¿Le gustaría recibir nuestras ofertas por WhatsApp?</label>
-
-          <input id="checkboxWhatsapp" type="checkbox" name="checkboxWhatsapp" class="form-control" checked>
+          <div class="form-error"></div>
         </div>
 
-        <button type="submit">Enviar Formulario</button><br>
+        <div class="group-input">
+          <label for="email" class="form-label">Correo electronico:</label>
+          <input id="email" type="email" name="email" class="form-control" placeholder="xxxxxx@xxxx">
 
-      </form>
+          <div class="form-error"></div>
+        </div>
 
-    </div>
+        <div class="group-input">
+          <label for="phone" class="form-label">Telefono:</label>
+          <input id="phone" type="text" name="phone" class="form-control" placeholder="xx-xxxxxxx">
+
+          <div class="form-error"></div>
+        </div>
+
+        <div class="group-input">
+          <label for="message" class="form-label">Mensaje:</label>
+          <textarea id="message" name="message" class="form-control" cols="47" rows="10"></textarea>
+
+          <div class="form-error"></div>
+        </div>
+
+      </fieldset>
+
+      <br>
+
+      <fieldset class="form-fieldset">
+        <legend>¿Qué tipo de calzado busca?</legend>
+
+        <div id="radio" class="group-input">
+          <label for="radio-children" class="form-label">Niños</label>
+          <input id="radio-children" type="radio" name="category" value="children" checked>
+
+          <label for="radio-ladies" class="form-label">Damas</label>
+          <input id="radio-ladies" type="radio" name="category" value="ladies">
+
+          <label for="radio-gentlemen" class="form-label">Caballeros</label>
+          <input id="radio-gentlemen" type="radio" name="category" value="gentlemen">
+
+          <div class="form-error"></div>
+        </div>
+      </fieldset>
+
+      <div class="form-check">
+        <label for="checkboxWhatsapp" class="form-check-label">¿Le gustaría recibir nuestras ofertas por WhatsApp?
+        </label>
+        <input id="checkboxWhatsapp" class="form-check-input" type="checkbox" value="">
+      </div>
+
+      <button class="form-button" type="submit">Enviar Formulario</button><br>
+
+    </form>
   </main>
-  
+
   <footer>
 
     <div class="caption">
@@ -119,10 +124,7 @@
 
   </footer>
 
-  <script src="./js/nav-bar.js"></script>
-  
-  <script src="./js/validation.js"></script>
- 
-  </body>
+  <script src="js/nav-bar.js"></script>
+</body>
 
 </html>
