--- a/public/index.html
+++ b/public/index.html
@@ -4,35 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="statics/fontawesome-free-652-web/css/all.min.css">
   <link rel="stylesheet" href="css/footer.css">
-  <!--google font-->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-    rel="stylesheet"> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  <!--google font-->
+
   <title>Zapateria Nino</title>
+
 </head>
 
 <body>
   <header class="header">
     <div class="logo">
-      <img src="./img/logo1.png" alt="logo_nino">
+      <img src="img/logo1.png" alt="logo_nino">
     </div>
     <nav class="nav-bar">
       <button class="menu-btn">Menu</button>
       <ul class="nav-menu">
         <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-        <li class="nav-item"><a href="./products.html" class="nav-link">Catalogo</a></li>
-        <li class="nav-item"><a href="./contacto.html" class="nav-link">Contacto</a></li>
-        <li class="nav-item"><a href="./ubicacion.html" class="nav-link">Ubicacion</a></li>
+        <li class="nav-item"><a href="products.html" class="nav-link">Catalogo</a></li>
+        <li class="nav-item"><a href="contacto.html" class="nav-link">Contacto</a></li>
+        <li class="nav-item"><a href="ubicacion.html" class="nav-link">Ubicacion</a></li>
       </ul>
     </nav>
    
