--- a/public/products.html
+++ b/public/products.html
@@ -6,11 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
 
-  <link rel="stylesheet" href="css/global_.css">
-  <link rel="stylesheet" href="css/navbar.css">
- 
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/temp__.css">
 
   <link rel="stylesheet" href="statics/fontawesome-free-652-web/css/all.min.css">
 
@@ -28,17 +24,17 @@
   <header id="nav-header" class="header">
 
     <div class="logo">
-      <img src="./img/logo1.png" alt="logo_nino">
+      <img src="img/logo1.png" alt="logo_nino">
     </div>
 
     <nav class="nav-bar">
       <button id="button-toggler" data-collapsed="true" class="menu-btn">Menu</button>
 
       <ul id="navbar-collapse" class="nav-menu collapse">
-        <li class="nav-item"><a href="./index.html">Inicio</a></li>
+        <li class="nav-item"><a href="index.html">Inicio</a></li>
         <li class="nav-item"><a href="#">Catalogo</a></li>
-        <li class="nav-item"><a href="./contacto.html">Contacto</a></li>
-        <li class="nav-item"><a href="./ubicacion.html" >Ubicacion</a></li>
+        <li class="nav-item"><a href="contacto.html">Contacto</a></li>
+        <li class="nav-item"><a href="ubicacion.html" >Ubicacion</a></li>
       </ul>
 
     </nav>
@@ -60,7 +56,6 @@
       <div class="title-section">Caballeros</div>
       <div id="caballeros-contenedor" class="box-container"></div>
     </section>
-
   </main>
 
   <footer>
@@ -79,8 +74,8 @@
 
   </footer>
 
-  <script src="./js/nav-bar.js"></script>
-  <script src="./js/products.js"></script>
+  <script src="js/nav-bar.js"></script>
+  <script src="js/products.js"></script>
 </body>
 
 </html>
