--- a/public/ubicacion.html
+++ b/public/ubicacion.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-  <!--css-->
-  
-  <link rel="stylesheet" href="css/global_.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/navbar.css">
-  <link rel="stylesheet" href="css/ubicacion.css">
-  <link rel="stylesheet" href="css/footer.css">
 
-  <!--iconos footer-->
+  <link rel="stylesheet" href="css/temp__.css">
 
   <link rel="stylesheet" href="statics/fontawesome-free-652-web/css/all.min.css">
+
   <!--google font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,73 +17,86 @@
     href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
   <!--google font-->
+
   <title>Zapateria Nino</title>
+
 </head>
 
 <body>
-  <header class="header">
-    <div class="logo">
-      <img src="./img/logo1.png" alt="logo_nino">
-    </div>
-    <nav class="nav-bar">
-      <button class="menu-btn">Menu</button>
-      <ul class="nav-menu">
-        <li><a href="./index.html" class="nav-link">Inicio</a></li>
-        <li><a href="./products.html" class="nav-link">Catalogo</a></li>
-        <li><a href="./contacto.html" class="nav-link">Contacto</a></li>
-        <li><a href="#" class="nav-link">Ubicacion</a></li>
-      </ul>
-    </nav>   
-  </header>
-    <main>
-      <br>
-      <h4>Nuestros horarios de atención son:</h4>
-      <br>
+  <header id="nav-header" class="header">
 
-      <table>
-  <!-- <tr> table rows -->
+    <div class="logo">
+      <img src="img/logo1.png" alt="logo_nino">
+    </div>
+
+    <nav class="nav-bar">
+      <button id="button-toggler" data-collapsed="true" class="menu-btn">Menu</button>
+
+      <ul id="navbar-collapse" class="nav-menu collapse">
+        <li class="nav-item"><a href="index.html">Inicio</a></li>
+        <li class="nav-item"><a href="products.html">Catalogo</a></li>
+        <li class="nav-item"><a href="contacto.html">Contacto</a></li>
+        <li class="nav-item"><a href="#">Ubicacion</a></li>
+      </ul>
+
+    </nav>
+
+  </header>
+
+  <main>
+    <h2>Nuestros horarios de atención son:</h2>
+
+    <div class="location-table-container">
+      <table class="location-table">
         <thead>
-  <!-- td sigue la logica de pares ordenados -->
-          <th>Días</th> 
-          <th>Mañana</th>
-          <th>Tarde</th>
+          <tr>
+            <th>Días</th>
+            <th>Mañana</th>
+            <th>Tarde</th>
+          </tr>
         </thead>
         <tbody>
           <tr>
-          <td>Lunes a Sabado </td>
-          <td>8:30 a 13 hs</td>
-          <td>15:30 a 19:30</td>
+            <td>Lunes a Sabado </td>
+            <td>8:30 a 13 hs</td>
+            <td>15:30 a 19:30</td>
           </tr>
         </tbody>
       </table>
-      
-      <section class="mapa">
-        <div class="mapa-contenido">
-          <br>
-          <h3 class="titulo-principal">Nuestra Ubicación</h3>
-          <br>
-          
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13116.41765410875!2d-58.3061452!3d-34.7277624!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d93aa9d092b%3A0xcf8a918a3e6b5197!2sCalzados%20Nino!5e0!3m2!1ses-419!2sar!4v1715982363820!5m2!1ses-419!2sar" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  	    </div>
-      </section> 
-    </main>  
-    <footer>
+    </div>
 
-  <div class="caption">
-    <span>Zapateria Nino</span>
-    <span>zapateria.nino@gmail.com</span>
-    <span>+54 11 xxx xxx-xxxx</span>
-  </div>
+    <h2>Nuestra Ubicación</h2>
+    <div class="map-container">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13116.41765410875!2d-58.3061452!3d-34.7277624!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32d93aa9d092b%3A0xcf8a918a3e6b5197!2sCalzados%20Nino!5e0!3m2!1ses-419!2sar!4v1715982363820!5m2!1ses-419!2sar"
+        width="700"
+        height="500"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </main>
 
-  <p class="icons">
-    <a href="https://twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="https://es-la.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
-  </p>
+  <footer>
 
-    </footer>
-    <script src="./js/script.js"></script>
-    <script src="./js/nav-bar.js"></script>
+    <div class="caption">
+      <span>Zapateria Nino</span>
+      <span>zapateria.nino@gmail.com</span>
+      <span>+54 11 xxx xxx-xxxx</span>
+    </div>
 
-  </body>
+    <p class="icons">
+      <a href="https://twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://es-la.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a>
+    </p>
+
+  </footer>
+  <script src="js/script.js"></script>
+  <script src="js/nav-bar.js"></script>
+
+</body>
+
 </html>
